medifee.com (archived on 2019-04-18)
{
  "alexa_rank": 185499,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 1440,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.32,
  "homepage_snapshot_redirected_domain": "medifee.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190123033836id_/https://www.medifee.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190123033836id_/http%3A//medifee.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "medifee.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190418095629id_/https%3A//www.medifee.com/privacy.php",
  "policy_title": "Privacy Policy of MediFee.com",
  "policy_url": "medifee.com/privacy.php",
  "sha1": "124b9ff17cae4a61f78a4e102b0882eb694467c9",
  "simhash": 15880977764816073160,
  "simhash_updated": false,
  "site_hostname": "medifee.com",
  "site_url": "http://medifee.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190418095629",
  "word_count": 237,
  "year": 2019
}

--- a/m/me/med/medifee.com.html
+++ b/m/me/med/medifee.com.html
@@ -1,7 +1,16 @@
-<!--The following is the downloaded HTML source of the medifee.com privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120200051id_/http%3A//www.medifee.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the medifee.com privacy policy that was archived on 2019-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190418095629id_/https%3A//www.medifee.com/privacy.php) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en"><head><style class="vjs-styles-defaults">
+    .video-js {
+      width: 300px;
+      height: 150px;
+    }
+
+    .vjs-fluid {
+      padding-top: 56.25%
+    }
+  </style>
  <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,14 +21,14 @@
    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
  <![endif]-->
-<meta name="description" content="Privacy policy of medifee.com by which all visitos data is secured.">
+<meta name="description" content="Know how medifee.com secures data collected from visitors on this privacy policy page.">
 <title>Privacy Policy of MediFee.com</title>
-</head>
+<style id="fit-vids-style">.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}</style></head>
 <body>
 
+<!--link href="/assets/css/font-awesome.min.css" rel="stylesheet"-->
 
-
-<script id="wonderpush-jssdk-loader" src="https://cdn.by.wonderpush.com/sdk/1.1/wonderpush-loader.min.js"></script><script type="text/javascript" async="" src="https://cdn.livechatinc.com/tracking.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script>
+<script id="wonderpush-jssdk-loader" src="https://cdn.by.wonderpush.com/sdk/1.1/wonderpush-loader.min.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -38,9 +47,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="/"><img src="/images/logo1.png" height="32" width="140" alt="medifee" class="navbar-brand"></a>
+          <a href="/"><img src="/images/logo1.png" height="32" width="140" alt="Medical Prices Search - Medifee" class="navbar-brand"></a>
 <script src="//load.sumome.com/" data-sumo-site-id="321daeac9b941269a8cae96a63beaf75ca522cb32c8d84e27d7da0ba789910bb" async=""></script>
-
 
 	
         </div>
@@ -48,114 +56,26 @@
           <ul class="nav navbar-nav">
 
            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-leaf"></span> Health Packages<span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-leaf"></span> Services<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu"><li>
-                </li><li><a href="/packages/basic-health-checkup/">Basic Health Checkup</a></li>
-		<li><a href="/packages/executive-health-checkup/">Executive Health Checkup</a></li>
-                <li><a href="/packages/full-body-checkup/">Full Body Checkup</a></li>
-                <li><a href="/packages/senior-citizen-health-checkup/">Senior Citizen Checkup</a></li>
-                <li><a href="/packages/well-women-checkup/">Wellness Checkup</a></li>
-		<li><a href="/packages/heart-checkup/">Cardiac Checkup</a></li>
-		<li><a href="/packages/diabetes-checkup/">Diabetes Checkup</a></li>
-		<li class="divider"></li>
-                <li><a href="/health-packages-list.php">View All Packages (13)</a></li>
+                </li><li><a href="/health-packages-list.php">Health Packages</a></li>
+                <li><a href="/tests/">Diagnostic Tests</a><!-- (<a href="/pathlab-cities.php">By Cities</a>)--></li>
+                <li><a href="/doctors/">Doctors</a></li>
+                <li><a href="/list/top-15-hospitals-in-india">Top Hospitals</a></li>
+                <li><a href="/treatments.php">Treatments</a></li>
+                <li><a href="/surgery/">Surgeries</a></li>
+                <li><a href="/medicine/">Medicines</a></li>
+                <li><a href="/hospital-cities.php">Hospitals</a></li>
+                <li><a href="/pathlab-cities.php">Diagnostic Centers</a></li>
+                <li><a href="/spa-services-india.php">Spa</a></li>
+                <li><a href="/diseases-faq.php">Disease FAQ</a></li>
               </ul>
            </li>
 
-		<!--li><a href="/offers.php"><span class="glyphicon glyphicon-tags"></span> &nbsp; Offers</a></li-->
+                <li id="custom_cart_option"><a data-toggle="modal" data-target="#popup_cart"><span class="fa fa-shopping-cart"></span> &nbsp; Manage Cart <span class="badge badge-notify my-cart-badge"></span></a></li>
 
-
-	<li class="dropdown">
-	  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-fire"></span> Medical Procedures<span class="caret"></span></a>
-	  <ul class="dropdown-menu" role="menu">
-		<li class="dropdown-submenu">
-			<a href="#">Dental Procedures</a>
-			<ul class="dropdown-menu">
-			  <li><a href="/treatment/dental-braces-cost/">Dental Braces</a></li>
-			  <li><a href="/treatment/dental-cap-cost/">Dental Cap Fitting</a></li>
-			  <!--li><a href="/treatment/dental-cleaning-cost/">Dental Cleaning</a></li>
-			  <li><a href="/treatment/dental-xray-cost/">Dental X-Ray</a></li-->
-			  <li><a href="/treatment/tooth-implant-cost/">Dental Implant</a></li>
-			  <li><a href="/treatment/root-canal-treatment-cost/">Root Canal Treatment</a></li>
-			  <li><a href="/treatment/wisdom-tooth-extraction-cost/">Wisdom Tooth Extraction</a></li>
-			</ul>
-		</li>
-		<li class="dropdown-submenu">
-			<a href="#">Eye Procedures</a>
-			<ul class="dropdown-menu">
-			  <li><a href="/treatment/cataract-surgery-cost/">Cataract Eye Surgery</a></li>
-			  <li><a href="/treatment/laser-eye-surgery-cost/">Laser Eye Surgery</a></li>
-			  <li><a href="/treatment/lasik-cost/">LASIK Eye Surgery</a></li>
-			  <li><a href="/treatment/squint-eye-surgery-cost/">Squint Eye Surgery</a></li>
-			  <li><a href="/treatment/glaucoma-cost/">Glaucoma Eye Surgery</a></li>
-			</ul>
-		</li>
-		<li class="dropdown-submenu">
-			<a href="#">Hair Procedures</a>
-			<ul class="dropdown-menu">
-			  <li><a href="/treatment/hair-fall-treatment-cost/">Hair Fall Treatment</a></li>
-			  <li><a href="/treatment/hair-transplant-surgery-cost/">Hair Transplant Surgery</a></li>
-			  <li><a href="/treatment/hair-weaving-cost/">Hair Weaving</a></li>
-			  <li><a href="/treatment/laser-hair-removal-cost/">Laser Hair Removal</a></li>
-			</ul>
-		</li>
-
-		<li class="dropdown-submenu">
-			<a href="#">Skin &amp; Weight Loss Procedures</a>
-			<ul class="dropdown-menu">
-			  <li><a href="/treatment/bariatric-surgery-cost/">Bariatric Surgery</a></li>
-			  <li><a href="/treatment/breast-implant-cost/">Breast Implant</a></li>
-			  <li><a href="/treatment/breast-reduction-surgery-cost/">Breast Reduction Surgery</a></li>
-			  <li><a href="/treatment/laser-tattoo-removal-cost/">Laser Tattoo Removal</a></li>
-			  <li><a href="/treatment/liposuction-cost/">Liposuction</a></li>
-			  <li><a href="/treatment/skin-laser-treatment-cost/">Skin Laser Treatment</a></li>
-			  <li><a href="/treatment/skin-polishing-cost/">Skin Polishing</a></li>
-			  <li><a href="/treatment/tummy-tuck-surgery-cost/">Tummy Tuck Surgery</a></li>
-			  <li><a href="/treatment/circumcision-cost/">Circumcision Surgery</a></li>
-			</ul>
-		</li>
-		<li class="dropdown-submenu">
-			<a href="#">Other Procedures</a>
-			<ul class="dropdown-menu">
-                          <li><a href="/treatment/ivf-treatment-cost/">IVF Procedure</a></li>
-			  <li><a href="/treatment/angiography-cost/">Angiography</a></li>
-			  <li><a href="/treatment/fissure-surgery-cost/">Fissure Surgery</a></li>
-			  <li><a href="/treatment/gastric-bypass-surgery-cost/">Gastric Bypass Surgery</a></li>
-			  <li><a href="/treatment/gastroscopy-cost/">Gastroscopy</a></li>
-			  <li><a href="/treatment/hernia-surgery-cost/">Hernia Surgery</a></li>
-			  <li><a href="/treatment/piles-surgery-cost/">Piles Surgery</a></li>
-			  <li><a href="/treatment/turp-surgery-cost/">TURP Surgery</a></li>
-			  <li><a href="/treatment/sigmoidoscopy-cost/">Sigmoidoscopy</a></li>
-			  <li><a href="/treatment/heart-valve-replacement-surgery-cost/">Heart Valve Replacement Surgery</a></li>
-			  <li><a href="/treatment/knee-replacement-surgery-cost/">Knee Replacement Surgery</a></li>
-			  <li><a href="/treatment/bypass-surgery-cost/">Bypass Surgery</a></li>
-			  <li><a href="/treatment/stapedectomy-cost/">Stapedectomy</a></li>
-			  <li><a href="/treatment/acl-surgery-cost/">ACL Surgery</a></li>
-			</ul>
-		</li>
-
-
-	  </ul>
-	</li>
-
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-home"></span> Diagnostics<span class="caret"></span></a>
-        <ul class="dropdown-menu" role="menu"><li>
-		</li><li><a href="/dc-in-new-delhi">New Delhi</a></li>
-		<li><a href="/dc-in-mumbai">Mumbai</a></li>
-		<li><a href="/dc-in-chennai">Chennai</a></li>
-		<li><a href="/dc-in-kolkata">Kolkata</a></li>
-        <li><a href="/dc-in-bangalore">Bangalore</a></li>
-        <li><a href="/dc-in-pune">Pune</a></li>
-		<li><a href="/dc-in-hyderabad">Hyderabad</a></li>
-		<li class="divider"></li>
-        <li><a href="/pathlab-cities.php">View All Cities (70)</a></li>
         </ul>
-           </li>
 
-
-		<li><a href="/list-center.php"><span class="glyphicon glyphicon-plus"></span> &nbsp; Add Your Center</a></li>
-	</ul>
 
         </div>
       </div>
@@ -163,67 +83,25 @@
 
 <div class="container">
 <div class="col-md-12">
-	<style type="text/css" media="all" scoped="">
-
-#display_results{
-    background: #FFF;
-    /*width: 82%;*/
-    width: 100%;
-	position: absolute;
-    /*left: 18%; */
-    z-index: 10;
-    box-shadow: 0 2px 5px rgba(0,0,0,.4);
-    border-radius: 0 0 5px 5px;
-}	
-
-#searchform .form-group{
-	position: relative;
-}
-
-#display_results .result li{
-	padding:5px 0;
-    text-align: left;
-}
-#display_results .result li a{
-
-    text-decoration: none;
-    padding: 7px 15px;
-    font-size: 15px;
-}	
-
-#display_results .result li:hover {
-	background: #F3F3F3;
-    text-decoration: none;
-}
-
-.sbtn {
-  border-radius:5px;
-  /*border-top-right-radius:5px;
-  border-bottom-right-radius:5px;*/
-}
-.rinput {
-  border-radius:5px;
-  /*border-top-left-radius:5px;
-  border-bottom-left-radius:5px;*/
-}
-
-
-
-</style>
-
+	
 <div class="panel panel-primary"><div class="panel-body center">
 <div id="main">
-<!--form id="searchform" method="get" class="form-inline" action="/get-search.php"-->
-<form id="searchform" method="get" class="form-inline">
-<div class="form-group" style="align: center">
-	<label class="lead">Search Tests: &nbsp; </label> &nbsp;
-<!--div class="input-append"-->
-<input type="text" name="search_query" id="search_query" size="40" placeholder="Enter test, diagnostic center or hospital name" class="form-control rinput" autocomplete="off"> <button type="submit" class="btn btn-primary sbtn" id="button_find"><span class="glyphicon glyphicon-search"></span> Search</button>
-<!--/div-->
-	<div id="display_results">
-	</div>
-</div>
-</form>
+
+
+    <form id="searchform" method="get" class="form-inline">
+    <div class="form-group">
+	    <label class="lead">Search Tests: &nbsp; </label> &nbsp;
+    <!--div class="input-append"-->
+    <input type="text" name="search_query" id="search_query" size="40" placeholder="Enter test, diagnostic center or hospital name" class="form-control rinput" autocomplete="off"> <button type="submit" class="btn btn-primary sbtn" id="button_find"><span class="glyphicon glyphicon-search"></span> Search</button>
+    <!--/div-->
+	    <div id="display_results">
+    	</div>
+    </div>
+    </form>
+
+
+
+
 </div>
 </div></div>
 
@@ -231,6 +109,28 @@
 
 </div>
 </div>
+
+<div class="modal fade" id="popup_cart" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document" style="width:80% !important">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+				<h4 class="modal-title" id="myModalLabel"><span class="glyphicon glyphicon-shopping-cart"></span> My Cart</h4>
+			</div>
+			<div class="modal-body">
+				<table class="table table-hover table-responsive" id="cartTable" style="margin-bottom:0px !important"></table>
+                                <p id="emptyCart">Your cart is empty!</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary" id="checkoutBtn">Checkout</button>
+			</div>
+		</div>
+	</div>
+</div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="/js/ecart.js"></script>
+
 
 <div class="container">
 
@@ -259,7 +159,7 @@ service opted or any other relevent.
 <p>
 <strong>How to opt out?</strong>
 </p><p>
-If you want to us to delete all of your information we have collected through any forms on the website, please <a href="http://www.medifee.com/contact.php">contact us</a>.
+If you want to us to delete all of your information we have collected through any forms on the website, please <a href="/contact.php">contact us</a>.
 
 </p>
 <p>
@@ -271,17 +171,31 @@ If you want to us to delete all of your information we have collected through an
 </div> <!-- container -->
 <div id="wonderpush-subscription-switch" data-sentence="Receive our latest news by web push: " data-on="YES" data-off="NO"></div>
 
-<hr><p class="text-center"><small><a href="http://www.medifee.com/career.php">We are Hiring</a> : <a href="/offers/thyrocare/test.php?tid=9">Executive Health Checkup</a> : <a href="/treatments.php">Treatments</a> : <a href="/diseases-faq.php">Diseases FAQs</a> : <a href="/blog/">Blog</a> 
+<hr><p class="text-center"><small> <!--a href="http://www.medifee.com/career.php">We are Hiring</a> :--> <a href="/offers/thyrocare/test.php?tid=9&amp;utm_campaign=banner-footer">Executive Health Checkup</a> : <a href="/blog/">Blog</a> 
 
-: <a href="/about.php">About Us</a> : <a href="/contact.php">Contact Us</a> : <a href="/privacy.php">Privacy Policy</a></small></p>
+: <a href="/about.php" rel="nofollow">About Us</a> : <a href="/contact.php" rel="nofollow">Contact Us</a> : <a href="/privacy.php" rel="nofollow">Privacy Policy</a> : <a href="/terms.php" rel="nofollow">Terms of Use</a></small></p>
 
 
-<script src="http://www.medifee.com/js/all.js"></script>
+<script src="/js/all.js"></script>
+<!--script src="/js/owl.carousel.min.js"></script-->
 <script type="text/javascript">
         $(document).ready(function(){
+
+/*        $(".owl-carousel").owlCarousel({
+            autoWidth:true,
+            loop:true
+        
+        });
+*/
         $("#search_results").slideUp();
 		$("#search_results").hide();
         $("#button_find").click(function(event){
+
+            if( !$("#search_query").val() ) {
+                    $("#search_query").css('border-color', 'red');;
+                    return false;
+            }
+
              event.preventDefault();
              search_ajax_way();
             $('#searchform').attr('action', "/get-search.php").submit();
@@ -311,17 +225,6 @@ If you want to us to delete all of your information we have collected through an
 
 
 
-<!-- Start of LiveChat (www.livechatinc.com) code -->
-<script type="text/javascript">
-window.__lc = window.__lc || {};
-window.__lc.license = 7954071;
-(function() {
-  var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
-  lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
-})();
-</script>
-<!-- End of LiveChat code -->
 
 
 <script>
@@ -350,7 +253,7 @@ WonderPush.init({
     }
 });
 </script>
-<img src="https://sp.analytics.yahoo.com/spp.pl?a=10000&amp;.yp=10008846">
+<img src="https://sp.analytics.yahoo.com/spp.pl?a=10000&amp;.yp=10008846" alt="">
 
 
 
