--- a/f/fa/far/farmersonly.com.html
+++ b/f/fa/far/farmersonly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the farmersonly.com privacy policy that was archived on 2017-11-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20171105192118id_/https%3A//www.farmersonly.com/pages/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the farmersonly.com privacy policy that was archived on 2019-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190418113851id_/https%3A//www.farmersonly.com/pages/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html itemscope="" itemtype="http://schema.org/WebPage" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
     <title>Privacy Policy</title>
@@ -9,27 +9,23 @@
     <meta name="language" content="en">
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <link rel="apple-touch-icon" href="//dfrkoxeews310.cloudfront.net/assets/touch-icons/57x57.png">
-    <link href="//dfrkoxeews310.cloudfront.net/assets/main/original-4117348229bc3ae850e3c400df45411a.css" media="screen" rel="stylesheet" type="text/css">
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-NM7FP7"></script><script src="//dfrkoxeews310.cloudfront.net/assets/main/original-2a8f9ed19918e1423ed069d13619926e.js" type="text/javascript"></script>
+    <link href="//dfrkoxeews310.cloudfront.net/assets/main/original-7933871ad36d25ae9de8885e3083a67c.css" media="screen" rel="stylesheet" type="text/css">
+    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-NM7FP7"></script><script src="//dfrkoxeews310.cloudfront.net/assets/main/original-79a3f09146e97445e42ed3ed78b14465.js" type="text/javascript"></script>
       <script type="text/javascript">
     if (!window.adSlots) {window.adSlots = []}
   </script>
 
 
-  <script async="" src="//static.hotjar.com/c/hotjar-213096.js?sv=5"></script></head>
+  </head>
   <body class="desktop  ">
     <script>
   dataLayer = {};
-    dataLayer['username']="";
-    dataLayer['controller']="static_page";
-    dataLayer['action']="index";
-    dataLayer['uid']="0381c1b2d48a88b1103549f96abe6597";
-    dataLayer['recently_joined']="";
-    dataLayer['browser_id']="0381c1b2d48a88b1103549f96abe6597";
-    dataLayer['membership']="unregistered";
-    dataLayer['source']="";
-    dataLayer['just_registered']="";
-    dataLayer['debug']="";
+      dataLayer['controller']="static_page";
+      dataLayer['action']="index";
+      dataLayer['uid']="bde5993389f967fc5bd721fa28a8c3e6";
+      dataLayer['browser_id']="bde5993389f967fc5bd721fa28a8c3e6";
+      dataLayer['membership']="unregistered";
+      dataLayer['device_type']="desktop";
   dataLayer=[dataLayer]
 </script>
 <!-- Google Tag Manager -->
@@ -45,7 +41,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <noscript>
       <div class="javascript_warning">
         <p><strong>Warning:</strong>
-          It appears your browser does not have javascript enabled. FarmersOnly.com requires javascript for a complete user experience. <a href="http://www.activatejavascript.org/" target="_blank">Click Here</a> for instructions on enabling javascript in your browser.</p>
+          It appears your browser does not have javascript enabled. FarmersOnly.com requires javascript for a complete user experience. <a href="http://www.activatejavascript.org/" rel="noopener noreferrer" target="_blank">Click Here</a> for instructions on enabling javascript in your browser.</p>
       </div>
     </noscript>
 
@@ -67,7 +63,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <p>This document represents a legal document that serves as our Privacy Policy. It governs the privacy terms of our Service. Our Privacy Policy is part of our Legal Terms. Capitalized terms, unless otherwise defined below, have the meaning specified within the Definitions section our Terms of Service.</p>
 
-<p>The last update to our Privacy Policy was posted on February 8, 2014. FarmersOnly follows all legal requirements to protect your privacy. Our Privacy Policy is a legal statement that explains how we may collect information from you, how we may share your information, and how you can limit our sharing of your information. </p>
+<p>The last update to our Privacy Policy was posted on July 10, 2018. FarmersOnly follows all legal requirements to protect your privacy. Our Privacy Policy is a legal statement that explains how we may collect information from you, how we may share your information, and how you can limit our sharing of your information. </p>
 
 <p>We break up the types of information you share into Non Personal Information and Personally Identifiable Information. “Non Personal Information” is information that is not personally identifiable to you and that we automatically collect when you access our Service with a web browser.  “Personally Identifiable Information” is non-public information that is personally identifiable to you and obtained in order for us to provide you within access to certain features of our Service. Personally Identifiable Information may include information such as your email address, physical location, and other related information that you provide to us or that we obtain about you. It may also include any pictures that upload when using our Service.</p>
 
@@ -118,7 +114,8 @@ post on these discussion boards, you should use care when exposing any Personall
 
 <p><strong>Links to Other Websites:</strong> Our Service may contain links to other websites. You agree that FarmersOnly has no control over such websites and that such websites are NOT subject to this Privacy Policy. These websites may have their own privacy policies and other legal documents. It is your sole responsibility to verify the privacy policies and other legal documents of such websites to see how they treat your personal information. You acknowledge that your use and access of these websites is solely at your own risk. </p>
 
-<p><strong>Our Email Policy:</strong> FarmersOnly and our affiliates fully comply with international laws regarding SPAM. You can always opt out of receipt of further email correspondence from FarmersOnly and/or our affiliates. We agree that we will not sell, rent, or trade your email address to any unaffiliated third-party without your permission. </p>
+<p><strong>Our Email Policy:</strong> FarmersOnly and our affiliates fully comply with international laws regarding SPAM. You can always opt out of receipt of further email correspondence from FarmersOnly and/or our affiliates. We agree that we will not sell, rent, or trade your email address to any unaffiliated third-party without your permission. If you no longer wish to receive our emails there is
+an Unsubscribe link located in the footer of all emails that we send.</p>
 
 <p><strong>Our Security Policy:</strong> FarmersOnly has constructed our Service using industry standard encryption and authentication tools to protect your Personally Identifiable Information. When we collect your Personally Identifiable Information through our Service, we encrypt this information and attempt to prevent unauthorized access to it by using industry standard technologies, such as encryption software, routers and firewalls. Unfortunately, due to the nature of the Internet, we cannot completely guarantee that your Personally Identifiable Information is completely protected. We strongly urge you to protect any password you may have for our Service and to not share it with anyone. You should always log out of our Service when not in use, especially if you are sharing a computer or mobile device with someone else or are using a public computer.</p>
 
@@ -126,7 +123,7 @@ post on these discussion boards, you should use care when exposing any Personall
 
 <p><strong>Changing Your Information:</strong> You may change your email address or other Personally Identifiable Information at any time using the account management features found on our Service. </p>
 
-<p><strong>Questions About Our Privacy Practices or This Privacy Policy:</strong> If you have any questions about our Privacy Practices or this Policy, please contact us by email at privacy@farmersonly.com.</p>
+<p><strong>Questions About Our Privacy Practices or This Privacy Policy:</strong> If you have any questions about our Privacy Practices or this Policy, please contact us by email at support@farmersonly.com. You may also write to us at 5645 Coral Ridge Drive, #293 Coral Springs, FL 33076.</p>
 
 </div>
         </div>
@@ -135,18 +132,15 @@ post on these discussion boards, you should use care when exposing any Personall
     <div class="content_footer">
       <div class="inner_foot">
         <font color="#000000">
-          <a href="http://blog.farmersonly.com/search/label/Success%20Story">Success Stories</a> |
-          <a href="http://blog.farmersonly.com/search/label/Jerry">Media &amp; Press</a> |
           <a href="/advertise">Advertise with Us</a> |
           <a href="/customer_support">Link to Us</a> |
-          <a href="/pages/faq">Frequently Asked Questions</a> |
-          <a href="http://store.farmersonly.com">FarmersOnly Online Store</a>
+          <a href="/pages/faq">Frequently Asked Questions</a>
         </font>
       </div>
     </div>
 
     <div class="outer_foot">
-      <p>© Copyright 2005 - 2017 FarmersOnly.com. All rights reserved</p>
+      <p>© Copyright 2005 - 2019 FarmersOnly.com. All rights reserved</p>
       <a href="/pages/terms_and_conditions">Terms &amp; Conditions</a> |
       <a href="/pages/privacy_policy">Privacy</a> |
       <a href="/customer_support">Support</a> |
@@ -172,17 +166,6 @@ post on these discussion boards, you should use care when exposing any Personall
   </script>
 
 
-
-  <script>
-      (function(h,o,t,j,a,r){
-          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-          h._hjSettings={hjid:213096,hjsv:5};
-          a=o.getElementsByTagName('head')[0];
-          r=o.createElement('script');r.async=1;
-          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-          a.appendChild(r);
-      })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
-  </script>
 
     
   
