--- a/f/fu/fun/funtvtab.com.html
+++ b/f/fu/fun/funtvtab.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the funtvtab.com privacy policy that was archived on 2018-08-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180817012436id_/http%3A//funtvtab.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the funtvtab.com privacy policy that was archived on 2019-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190418115215id_/http%3A//funtvtab.com/privacy) for the most accurate reproduction.-->
 
 <html><head><meta content="text/html; charset=UTF-8" http-equiv="content-type">
         <style type="text/css">
@@ -1128,7 +1128,8 @@
                 text-align: left;
             }
         </style>
-    </head>
+    <link rel="stylesheet" href="//d2mq51fvs4qv44.cloudfront.net/extensions/css/common_lp2.css">
+</head>
     <body class="c14 c21">
         <p class="c10">
             <span class="c19">Funtvtab</span><span class="c12">&nbsp;- Privacy Policy</span></p>
