--- a/s/sh/sha/shakiragallery.com.html
+++ b/s/sh/sha/shakiragallery.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shakiragallery.com privacy policy that was archived on 2018-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181215222916id_/http%3A//www.shakiragallery.com/files/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shakiragallery.com privacy policy that was archived on 2019-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190418141821id_/http%3A//shakiragallery.com/files/privacy.html) for the most accurate reproduction.-->
 
 <html><head></head><body><pre>Privacy Policy for www.shakiragallery.com 
 
