--- a/3/36/365/365dayclub.com.html
+++ b/3/36/365/365dayclub.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 365dayclub.com privacy policy that was archived on 2018-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181215044154id_/http%3A//365dayclub.com/pages/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 365dayclub.com privacy policy that was archived on 2019-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190418154527id_/http%3A//www.365dayclub.com/pages/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -162,9 +162,9 @@ Us</a>. <br>
                            <div class="ad"> 
 
                            <br>
-                           <a href="http://365dayclub.com/scripts/runner.php?BA=17&amp;hash=2395af74cab444744293ef44686f0104&amp;url=http%3A%2F%2F4f268rqqufshdsecs-n88pcxa3.hop.clickbank.net%2F%3Ftid%3D365b2" target="_blank"><img src="http://365dayclub.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fdpsq2uzakdgqz.cloudfront.net%2Fbanners%2Frwj125x125.gif&amp;hash=120a4e904b24e82f31e6d0da98aff2aa" alt="" border="0"></a><br> 
+                           <table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a target="_blank" href="http://shushen.writing777.hop.clickbank.net"><img src="http://writing-jobs.net/images/banners/125x125-a.jpg"></a></td></tr></tbody></table> 
                            <br>
-                            <a href="http://365dayclub.com/scripts/runner.php?BA=16&amp;hash=5fde3cae8009133291fbb073fdc4f864&amp;url=http%3A%2F%2F156aehke05medtbd6f7-0q7ybo.hop.clickbank.net%2F%3Ftid%3D365b2" target="_blank"><img src="http://365dayclub.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fwww.paid-surveys-at-home.com%2Fbanners%2F125x125.gif&amp;hash=0508c8b0b1ec07d2710ff3ff3b5c5db4" alt="" border="0"></a><br>
+                            <a href="http://365dayclub.com/scripts/runner.php?BA=32&amp;hash=c46eb220f25a9b378cb26575efb64277&amp;url=http%3A%2F%2Fshushen.goldops777.hop.clickbank.net" target="_blank"><img src="http://365dayclub.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fgoldopinions.com%2Fimages%2Fbanners%2F125x125-a.gif&amp;hash=92fe0e8f1d14594633592ee4d24f5b71" alt="" border="0"></a><br>
                         </div>
                            <div id="bo"></div>
                          </div>
