--- a/b/bm/bmi/bmi.com.html
+++ b/b/bm/bmi/bmi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bmi.com privacy policy that was archived on 2018-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181219171047id_/https%3A//www.bmi.com/legal/entry/533244) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bmi.com privacy policy that was archived on 2019-04-18.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190418184520id_/https%3A//www.bmi.com/legal/entry/533244) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#
 	article: http://ogp.me/ns/article#">
@@ -64,7 +64,7 @@
 <!-- LOAD STYLE SHEETS -->
 <link rel="stylesheet" href="https://www.bmi.com/cardinal_css/cache/286950c4eb36f95e23e3e3afa1c0cf78ea32b88a.1410881655.css">
 
-<link rel="stylesheet" href="https://www.bmi.com/cardinal_css/cache/2f8e46554fe564d5dae695e22f93e7b12abc18cd.1543340969.css">
+<link rel="stylesheet" href="https://www.bmi.com/cardinal_css/cache/2f8e46554fe564d5dae695e22f93e7b12abc18cd.1548782952.css">
 
 
 <!-- GA Tracking Start -->
@@ -445,7 +445,7 @@
 
 <h2 id="who">Who We Are</h2>
 
-<p>Broadcast Music, Inc. (“BMI”) is a U.S. music performing rights organization. Headquartered in New York at 7 World Trade Center, 250 Greenwich Street, New York, NY 10007, BMI also maintains offices in Atlanta, London, Los Angeles, Nashville, Miami and Puerto Rico. We can be reached by e-mail at <span data-eeencemail_oizbqbkwww="1"><a href="mailto:webmaster@bmi.com">webmaster@bmi.com</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 114',' 101',' 116',' 115',' 97',' 109',' 98',' 101',' 119','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 114',' 101',' 116',' 115',' 97',' 109',' 98',' 101',' 119',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_OIZbqbkWWw'))el[j].innerHTML = out;/*]]>*/</script>, or by telephone at (212) 220-3000. As described more thoroughly below, BMI generally owns all of the information collected on bmi.com.</p>
+<p>Broadcast Music, Inc. (“BMI”) is a U.S. music performing rights organization. Headquartered in New York at 7 World Trade Center, 250 Greenwich Street, New York, NY 10007, BMI also maintains offices in Atlanta, London, Los Angeles, Nashville, Miami and Puerto Rico. We can be reached by e-mail at <span data-eeencemail_qxdttjeezy="1"><a href="mailto:webmaster@bmi.com">webmaster@bmi.com</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 114',' 101',' 116',' 115',' 97',' 109',' 98',' 101',' 119','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 114',' 101',' 116',' 115',' 97',' 109',' 98',' 101',' 119',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_QxDTTjeeZY'))el[j].innerHTML = out;/*]]>*/</script>, or by telephone at (212) 220-3000. As described more thoroughly below, BMI generally owns all of the information collected on bmi.com.</p>
 
 <h2 id="what">What We Collect and How We Use It</h2>
 
@@ -464,7 +464,7 @@
 <p>BMI will provide visitors with the ability to register to receive electronic newsletters and other materials. These are opt-in services, which means you can choose whether you want to receive the material, and you can always change your mind. BMI will use whatever personally identifiable information you do provide, such as name and e-mail address, solely for purposes of distributing the materials. We may also use aggregated information, such as the number of songwriters who opted-in. We do not presently share personally identifiable information with third parties.</p>
 
 <!--
-BMI may also provide visitors with the ability to purchase merchandise through the BMI Store and customers may be asked to provide information sufficient to process the order such as name, mailing address, and credit card number. Orders are processed through Yahoo! Store. Credit card information is encrypted while it is transferred over the Internet. Any such personally identifiable information can be modified at your request by forwarding an email to <span data-eeEncEmail_zacqRdbAOx='1'>.(JavaScript must be enabled to view this email address)</span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 101',' 114',' 111',' 116',' 115','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 101',' 114',' 111',' 116',' 115',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_zacqRdbAOx'))el[j].innerHTML = out;/*]]>*/</script> or calling the Special Projects Department at 615-401-2000. 
+BMI may also provide visitors with the ability to purchase merchandise through the BMI Store and customers may be asked to provide information sufficient to process the order such as name, mailing address, and credit card number. Orders are processed through Yahoo! Store. Credit card information is encrypted while it is transferred over the Internet. Any such personally identifiable information can be modified at your request by forwarding an email to <span data-eeEncEmail_lPusmdlqzI='1'>.(JavaScript must be enabled to view this email address)</span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 101',' 114',' 111',' 116',' 115','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 101',' 114',' 111',' 116',' 115',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_lPusmdlqzI'))el[j].innerHTML = out;/*]]>*/</script> or calling the Special Projects Department at 615-401-2000. 
 
 BMI does not presently share any personally identifiable information provided through the BMI Store with third parties other than as described above without first obtaining your permission.
 -->
@@ -474,14 +474,14 @@ BMI does not presently share any personally identifiable information provided th
 <p>BMI also has several business-to-business applications on the website and will likely continue to develop more in the future. These services often require users to disclose information in connection with the transaction.</p>
 
 <h2 id="digital">BMI’s Digital Licensing Center</h2>
-<p>BMI’s Digital Licensing Center provides Internet websites with the ability to obtain a BMI Website Music Performance Agreement through the website. Customers will need to enter information about themselves, their business and about their website(s). They may also choose to provide a credit card for payment purposes. All information provided to BMI through the Digital Licensing Center is encrypted while it is transferred over the Internet and is stored on an internal BMI computer which is not accessible to the public. Access to credit card information is further restricted to those BMI employees who are responsible for processing the license. Any such personally identifiable information can be modified at your request by forwarding an e-mail to <a href="digitallicensing@bmi.com"><span data-eeencemail_qzfwhbseuf="1"><a href="mailto:digitallicensing@bmi.com">digitallicensing@bmi.com</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 103',' 110',' 105',' 115',' 110',' 101',' 99',' 105',' 108',' 108',' 97',' 116',' 105',' 103',' 105',' 100','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 103',' 110',' 105',' 115',' 110',' 101',' 99',' 105',' 108',' 108',' 97',' 116',' 105',' 103',' 105',' 100',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_QZfWhBSeuF'))el[j].innerHTML = out;/*]]>*/</script></a> or calling the Internet License Department at (212) 220-3000.</p>
+<p>BMI’s Digital Licensing Center provides Internet websites with the ability to obtain a BMI Website Music Performance Agreement through the website. Customers will need to enter information about themselves, their business and about their website(s). They may also choose to provide a credit card for payment purposes. All information provided to BMI through the Digital Licensing Center is encrypted while it is transferred over the Internet and is stored on an internal BMI computer which is not accessible to the public. Access to credit card information is further restricted to those BMI employees who are responsible for processing the license. Any such personally identifiable information can be modified at your request by forwarding an e-mail to <span data-eeencemail_rqzqhrnfvq="1"><a href="mailto:digitallicensing@bmi.com">digitallicensing@bmi.com</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 103',' 110',' 105',' 115',' 110',' 101',' 99',' 105',' 108',' 108',' 97',' 116',' 105',' 103',' 105',' 100','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 103',' 110',' 105',' 115',' 110',' 101',' 99',' 105',' 108',' 108',' 97',' 116',' 105',' 103',' 105',' 100',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_rQzQHRNfvQ'))el[j].innerHTML = out;/*]]>*/</script> or calling the Internet License Department at (212) 220-3000.</p>
 
 <p>BMI will use this information to generate the appropriate electronic license. In addition, BMI may use the information for internal development purposes in order to improve the system. We may ask you whether you need to obtain additional licenses from third parties, and if so, whether you would like BMI to facilitate the process by forwarding your name and contacting information to the appropriate third party. We will always disclose the identity of the third party prior to sharing any information. Finally, BMI may use aggregated information about the use of the Digital Licensing Center, such as the number of licenses executed, and the type of customers using the service to promote the success of the service.</p>
 
 <p>BMI does not presently share any personally identifiable information provided through the Digital Licensing Center with third parties other than as described above without first obtaining your permission.</p>
 
 <h2 id="electronic">Electronic Music Use Reporting</h2>
-<p>BMI’s Electronic Music Use Reporting System provides BMI’s radio station customers with the ability to file playlist information through the website. Radio Station customers will need to enter personally identifiable information about themselves, and additional information about their station and about the music they play. All information provided to BMI through the Electronic Music Use Reporting System is stored on an internal BMI computer which is not accessible to the public. Any personally identifiable information can be modified at your request by forwarding an e-mail to <span data-eeencemail_yclbcjcidh="1"><a href="mailto:playlists@bmi.com">playlists@bmi.com</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 115',' 116',' 115',' 105',' 108',' 121',' 97',' 108',' 112','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 115',' 116',' 115',' 105',' 108',' 121',' 97',' 108',' 112',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_YCLBcjCIDh'))el[j].innerHTML = out;/*]]>*/</script> or calling the Logging Department at 615-401-2000.</p>
+<p>BMI’s Electronic Music Use Reporting System provides BMI’s radio station customers with the ability to file playlist information through the website. Radio Station customers will need to enter personally identifiable information about themselves, and additional information about their station and about the music they play. All information provided to BMI through the Electronic Music Use Reporting System is stored on an internal BMI computer which is not accessible to the public. Any personally identifiable information can be modified at your request by forwarding an e-mail to <span data-eeencemail_uhlnjhqseu="1"><a href="mailto:playlists@bmi.com">playlists@bmi.com</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 115',' 116',' 115',' 105',' 108',' 121',' 97',' 108',' 112','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 115',' 116',' 115',' 105',' 108',' 121',' 97',' 108',' 112',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_uhlnjhqSeU'))el[j].innerHTML = out;/*]]>*/</script> or calling the Logging Department at 615-401-2000.</p>
 
 <p>BMI will use this information to distribute royalties to BMI-affiliated writers and publishers. In addition, BMI may use the information for internal market share analysis, for external negotiations, and for other purposes. BMI may also use aggregated information for marketing and promotional purposes.</p>
 
@@ -514,7 +514,7 @@ BMI does not presently share any personally identifiable information provided th
 
 <h2 id="questions">Questions or Comments</h2>
 
-<p>If you have any additional questions or comments with respect to the security of our website, please send an e-mail to <span data-eeencemail_ggazbbpigw="1"><a href="mailto:webmaster@bmi.com">webmaster@bmi.com</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 114',' 101',' 116',' 115',' 97',' 109',' 98',' 101',' 119','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 114',' 101',' 116',' 115',' 97',' 109',' 98',' 101',' 119',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_ggazBBPIgw'))el[j].innerHTML = out;/*]]>*/</script>, or call (212) 220-3000.</p>
+<p>If you have any additional questions or comments with respect to the security of our website, please send an e-mail to <span data-eeencemail_oeyiqfdahg="1"><a href="mailto:webmaster@bmi.com">webmaster@bmi.com</a></span><script type="text/javascript">/*<![CDATA[*/var out = '',el = document.getElementsByTagName('span'),l = ['>','a','/','<',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 114',' 101',' 116',' 115',' 97',' 109',' 98',' 101',' 119','>','\"',' 109',' 111',' 99',' 46',' 105',' 109',' 98',' 64',' 114',' 101',' 116',' 115',' 97',' 109',' 98',' 101',' 119',':','o','t','l','i','a','m','\"','=','f','e','r','h','a ','<'],i = l.length,j = el.length;while (--i >= 0)out += unescape(l[i].replace(/^\s\s*/, '&#'));while (--j >= 0)if (el[j].getAttribute('data-eeEncEmail_oeYIQFDahg'))el[j].innerHTML = out;/*]]>*/</script>, or call (212) 220-3000.</p>
 </div>
 <!-- PRIMARY end -->
 
@@ -659,7 +659,7 @@ BMI does not presently share any personally identifiable information provided th
 		<div class="row">
 			<div class="span12">
 				<div class="footermark center">
-					Copyright 1994-2018 ©, Broadcast Music, Inc.® unless otherwise specified. BMI®, BMI.com® and Broadcast Music, Inc.® are registered trademarks of Broadcast Music, Inc. <span id="blockme">• <a href="/legal/entry/533243/#questions">Terms of Use</a> • <a href="/legal/entry/533244">Privacy Policy</a></span>
+					Copyright 1994-2019 ©, Broadcast Music, Inc.® unless otherwise specified. BMI®, BMI.com® and Broadcast Music, Inc.® are registered trademarks of Broadcast Music, Inc. <span id="blockme">• <a href="/legal/entry/533243/#questions">Terms of Use</a> • <a href="/legal/entry/533244">Privacy Policy</a></span>
 				</div>
 			</div>
 		</div>
@@ -765,7 +765,7 @@ $(document).ready(function(){
 			
 				<input type="text" name="username" size="20" maxlength="20" placeholder="Username" value="" required="required" class="logintext"><br class="clearfix">
 				<input type="password" name="password" size="20" placeholder="Password" value="" required="required"><br>
-				<label><input type="checkbox" name="disclaimer" value="true" required="required"> I agree to <a href="https://applications.bmi.com/security/Disclaimer.asp" target="_blank">terms and conditions</a> of use.</label>
+				<label><input type="checkbox" name="disclaimer" value="true" required="required"> I agree to the <a href="/legal/entry/terms_of_use_for_bmi_online_services" target="_blank">Terms of Use for BMI Online Services</a>.</label>
 				<input type="submit" class="btn btn-success btn-large btn-flat" name="Login" value="Login" data-title="Login">
 			
 			</fieldset>
@@ -791,7 +791,7 @@ $(document).ready(function(){
 			<a href="/join" class="btn btn-primary btn-large btn-flat btn-width" data-title="Join">Join BMI</a>
 		</div>
 		<div class="mumod ">
-			<p>Apply for a BMI License</p><a href="/licensing" class="btn btn-primary btn-large btn-flat btn-width" data-title="Apply for License">Apply for a License</a>
+			<p>Apply for a BMI License</p><a href="https://bmusic.force.com" class="btn btn-primary btn-large btn-flat btn-width" data-title="Apply for License">Apply for a License</a>
 		</div>
 	</div>
 </div>
@@ -905,6 +905,47 @@ if (typeof jQuery != 'undefined') {
 		});
 	});
 }
+</script>
+
+<script>
+
+/* Disable UGC during site migration */
+
+
+// get query string (only needed for testing and development)
+function getUrlParameter(name) {
+  name = name.replace(/[\[]/, '\\[').replace(/[\]]/, '\\]');
+  var regex = new RegExp('[\\?&]' + name + '=([^&#]*)');
+  var results = regex.exec(location.search);
+  return results === null ? '' : decodeURIComponent(results[1].replace(/\+/g, ' '));
+};
+
+// are we blocking UGC?
+if ("false" == "true" || getUrlParameter("block_ugc") == "true") {
+
+  display_ugc_block_notice();
+  disable_ugc_submit();
+  
+}
+
+// display our notice
+function display_ugc_block_notice() {
+  
+  ugc_alert = '<div class="alert alert-error"><h3>Submission Suspended</h3><p>Submissions are temporarily suspended for site maintenance.</p><p>We apologize for any inconvenience.</p></div>';
+  
+  $( ".ugc" ).prepend(ugc_alert);
+
+}
+
+// block submit button
+function disable_ugc_submit() {
+  
+  $(".ugc input[type='submit']").attr("disabled", "disabled");
+  
+}
+
+
+
 </script>
 
 
