--- a/w/wh/whi/whirlpool.net.au.html
+++ b/w/wh/whi/whirlpool.net.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the whirlpool.net.au privacy policy that was archived on 2018-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181120071646id_/https%3A//whirlpool.net.au/wiki/wp_privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whirlpool.net.au privacy policy that was archived on 2019-04-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190419003921id_/https%3A//whirlpool.net.au/wiki/wp_privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><head>
 	<meta charset="utf-8">
@@ -10,7 +10,13 @@
 	
 	
 	
-
+	
+	
+	
+		
+		
+	
+	
 	
 	<meta name="ROBOTS" content="">
 	
@@ -51,14 +57,11 @@
 	<meta property="og:site_name" content="Whirlpool.net.au">
 	
 	
-	<link rel="stylesheet" href="/skin/style.css?056d">
+	<link rel="stylesheet" href="/skin/style.css?0007">
 	
 	
 	
-	
-	
-	
-	<script src="/skin/script.js?056d"></script>
+	<script src="/skin/script.js?0007"></script>
 	
 	
 	<!--[if lte IE 8]><script src="/skin/bower_components/respond/dest/respond.min.js"></script><![endif]-->
@@ -89,7 +92,7 @@
 <div id="topbar">
 	<button id="hamburger">menu</button>
 	<a id="toplogo" href="/"><span>Whirlpool</span></a>
-	<span class="accessible" style="display:none;"><a href="#navigation">Go to navigation</a></span>
+	<span class="accessible"><a href="#navigation">Go to navigation</a></span>
 	<div id="userbar">
 		
 		
@@ -297,26 +300,26 @@
 		<div id="bignumbers">
 			<dl>
 				<dt>Local time</dt>
-				<dd>6:16 PM&nbsp; <a href="https://whirlpool.net.au/profile/?action=preferences">aedt</a></dd>
-				<dd>20 November 2018</dd>
+				<dd>10:39 AM&nbsp; <a href="https://whirlpool.net.au/profile/?action=preferences">aest</a></dd>
+				<dd>19 April 2019</dd>
 			</dl>
 			<dl>
 				<dt>Membership</dt>
-				<dd>824,825 registered members</dd>
-				<dd>12,515 visited in past 24 hrs</dd>
+				<dd>836,856 registered members</dd>
+				<dd>11,526 visited in past 24 hrs</dd>
 				
-				<dd>1,083 members online now</dd>
-				<dd>1,353 guests visiting now</dd>
+				<dd>813 members online now</dd>
+				<dd>1,055 guests visiting now</dd>
 				
 			</dl>
 			<dl>
 				<dt>Big numbers</dt>
-				<dd>2,481,024 threads</dd>
-				<dd>57,785,002 posts</dd>
-				<dd>5,135,288 whims sent</dd>
-				<dd><a href="https://whirlpool.net.au/wiki/">4,726 wiki topics</a></dd>
-				<dd><a href="https://whirlpool.net.au/bc/hardware">1,787 modems &amp; routers</a></dd>
-				<dd>79,193 features filled</dd>
+				<dd>2,508,398 threads</dd>
+				<dd>58,804,897 posts</dd>
+				<dd>5,194,505 whims sent</dd>
+				<dd><a href="https://whirlpool.net.au/wiki/">4,761 wiki topics</a></dd>
+				<dd><a href="https://whirlpool.net.au/bc/hardware">1,811 modems &amp; routers</a></dd>
+				<dd>80,089 features filled</dd>
 			</dl>
 		</div>
 
@@ -354,7 +357,7 @@
 		
 		<dd><a href="/forum/125">Telecomms</a></dd>
 		
-		<dd><a href="/forum/116">Web hosting</a></dd>
+		<dd><a href="/forum/116">Hosting companies</a></dd>
 		
 		<dd><a href="/forum/63">Web development</a></dd>
 		
@@ -516,7 +519,7 @@
 	<dl class="copyright">
 		<dt class="whirlpool"><a href="https://whirlpool.net.au/"><span>Whirlpool.net.au</span></a></dt>
 		<dd>
-			Copyright © 2018<br>
+			Copyright © 2019<br>
 			Whirlpool.net.au<br>
 			<br>
 			<a href="https://whirlpool.net.au/wiki/wp_legal">Legal</a>
