--- a/r/ro/roy/royalnumerology.com.html
+++ b/r/ro/roy/royalnumerology.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the royalnumerology.com privacy policy that was archived on 2018-11-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181103123959id_/https%3A//www.royalnumerology.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the royalnumerology.com privacy policy that was archived on 2019-04-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190419104406id_/https%3A//www.royalnumerology.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -17,7 +17,7 @@
 
 <style>
 
-   .error{
+   /*.error{
 
       border:1px solid #f00 !important;
 
@@ -27,7 +27,7 @@
 
       display:none !important;
 
-   }
+   }*/
 
 </style>
 
