voscast.com (archived on 2019-04-20)
{
  "alexa_rank": 414212,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 6438,
  "classifier_probability": 0.77,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 8.42,
  "homepage_snapshot_redirected_domain": "voscast.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190612225107id_/https://www.voscast.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190612225107id_/http%3A//voscast.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "voscast.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190420235539id_/https%3A//www.voscast.com/terms/%23privacy",
  "policy_title": "VosCast - SHOUTcast Hosting",
  "policy_url": "voscast.com/terms/#privacy",
  "sha1": "16cdaee506ee14db1457de05293835c428ff53cf",
  "simhash": 9968575537635407428,
  "simhash_updated": false,
  "site_hostname": "voscast.com",
  "site_url": "http://voscast.com",
  "smog": 11.6,
  "strict_updated": false,
  "timestamp": "20190420235539",
  "word_count": 1066,
  "year": 2019
}

--- a/v/vo/vos/voscast.com.html
+++ b/v/vo/vos/voscast.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the voscast.com privacy policy that was archived on 2018-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180605155130id_/http%3A//voscast.com/terms/%23privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the voscast.com privacy policy that was archived on 2019-04-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190420235539id_/https%3A//www.voscast.com/terms/%23privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -9,11 +9,26 @@
 	<link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 	<title>VosCast - SHOUTcast Hosting</title>
 	<link href="/css3/style2.css" type="text/css" rel="stylesheet">
-</head>	<body>
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=AW-997950943"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-997950943');
+    </script>
+    <script>
+      gtag('event', 'conversion', {
+          'send_to': 'AW-997950943/b3UNCOvAtl8Q34vu2wM',
+          'aw_remarketing_only': true
+      });
+    </script>
+</head>
+	<body>
 		<div id="wrap">
 			<div id="header">
 	<div id="logo"></div>
-	<div id="support" data-id="eVaO5j2465" class="livechat_button">
+	<div id="support" data-id="eVaO5j2465" class="livechat_button" style="font-size:0px;">
 			<a href=""></a>
 		</div>
 	<div class="clear"></div>
@@ -26,9 +41,10 @@
 						<li><a href="/support/">Support</a></li>
 						<li><span class="sl"></span><a href="/resources/" class="current">Resources</a><span class="sr"></span></li>
 						<li><a href="/client/">Client Login</a></li>
-				
+		
 	</ul>
-</div>			<div class="mdivide"></div>
+</div>
+			<div class="mdivide"></div>
 			<div class="title">Terms of Service</div>
 			
 			<div class="ctop"></div>
@@ -188,12 +204,12 @@
 		</div>
 		<div class="bdiv"></div>
 		<div class="fb">
-						<iframe src="http://www.facebook.com/plugins/like.php?app_id=133480360068599&amp;href=http%3A%2F%2Ffacebook.com%2FVosCast&amp;send=false&amp;layout=box_count&amp;width=50&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=90" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:50px; height:70px;" allowtransparency="true"></iframe>
+						<iframe src="//www.facebook.com/plugins/like.php?app_id=133480360068599&amp;href=http%3A%2F%2Ffacebook.com%2FVosCast&amp;send=false&amp;layout=box_count&amp;width=50&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=90" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:51px; height:70px;" allowtransparency="true"></iframe>
 					</div>
 		<div class="clear"></div>
 	</div>
 	<div id="footer">
-		Copyright © 2018 VosCast. All Rights Reserved.
+		Copyright © 2019 VosCast. All Rights Reserved.
 	</div>
 </div>
 <script type="text/javascript">
@@ -221,21 +237,5 @@ __lc.group = 1;
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
 })();
 </script>
-<!-- Google Code for voscast.com -->
-<script type="text/javascript">
-/* <![CDATA[ */
-var google_conversion_id = 997950943;
-var google_conversion_label = "b3UNCOvAtl8Q34vu2wM";
-var google_custom_params = window.google_tag_params;
-var google_remarketing_only = true;
-/* ]]> */
-</script>
-<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
-</script>
-<noscript>
-<div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/997950943/?value=1.00&amp;currency_code=CAD&amp;label=b3UNCOvAtl8Q34vu2wM&amp;guid=ON&amp;script=0"/>
-</div>
-</noscript>
 	
 </body></html>
