mycutegames.com (archived on 2019-04-21)
{
  "alexa_rank": 82210,
  "analysis_subcorpus": true,
  "categories": "entertainment;games;shopping",
  "char_count": 7040,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.7,
  "homepage_snapshot_redirected_domain": "mycutegames.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190516203258id_/https://mycutegames.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190516203258id_/http%3A//mycutegames.com",
  "interval": "2019_A",
  "link_text": "PrivacyPolicy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mycutegames.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190421044634id_/https%3A//mycutegames.com/privacy.html",
  "policy_title": "PrivacyPolicy - My Cute Games",
  "policy_url": "mycutegames.com/privacy.html",
  "sha1": "7bb8f75d9a86645ef8a20fc1186b1950308630bd",
  "simhash": 3813297951802129384,
  "simhash_updated": false,
  "site_hostname": "mycutegames.com",
  "site_url": "http://mycutegames.com",
  "smog": 16.32,
  "strict_updated": false,
  "timestamp": "20190421044634",
  "word_count": 1114,
  "year": 2019
}

--- a/m/my/myc/mycutegames.com.html
+++ b/m/my/myc/mycutegames.com.html
@@ -1,70 +1,52 @@
-<!--The following is the downloaded HTML source of the mycutegames.com privacy policy that was archived on 2018-04-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180412194312id_/http%3A//mycutegames.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mycutegames.com privacy policy that was archived on 2019-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190421044634id_/https%3A//mycutegames.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=""><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		
-		<link rel="stylesheet" href="http://mycutegames.com/templates/js/owl-carousel/owl.carousel.css">
-        <link rel="stylesheet" href="http://mycutegames.com/templates/js/owl-carousel/owl.theme.css">
-		
+
+		<link rel="stylesheet" href="https://mycutegames.com/templates/js/owl-carousel/owl-carousel2/assets/owl.carousel.css">
+		<link rel="stylesheet" href="https://mycutegames.com/templates/js/owl-carousel/owl-carousel2/assets/animate.css">
+
 		<meta name="description" content="">
         <meta name="keywords" content="">
-        		 <link rel="shortcut icon" href="http://mycutegames.com/favicon.ico">
+        		 <link rel="shortcut icon" href="https://mycutegames.com/favicon.ico">
 		 <title>PrivacyPolicy - My Cute Games</title>
-		
+
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="http://mycutegames.com/templates/css/bootstrap/css/bootstrap.min.css?1">
+		<link rel="stylesheet" href="https://mycutegames.com/templates/css/bootstrap/css/bootstrap.min.css?1">
 
 		<!-- Optional theme -->
-		<link rel="stylesheet" href="http://mycutegames.com/templates/css/bootstrap/css/bootstrap-theme.min.css">
-		
-		<link rel="stylesheet" href="http://mycutegames.com/templates/css/jquery.mCustomScrollbar.css">
-		
-		<link rel="stylesheet" href="http://mycutegames.com/templates/js/jquery-ui-1.11.2/jquery-ui.css">
-		
-		<link href="http://mycutegames.com/templates/css/style_new.css?13" rel="stylesheet">
-		
-		<!-- Latest compiled and minified JavaScript -->
-		
-		
-		
-		<script type="text/javascript" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://mycutegames.com/templates/js/jquery-1.11.2.min.js"></script>
-		<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script-->
-		<script type="text/javascript" src="http://mycutegames.com/templates/js/jquery-ui-1.11.2/jquery-ui.min.js"></script>
-		<script src="http://mycutegames.com/templates/js/jquery.mCustomScrollbar.concat.min.js"></script>
-		<script src="http://mycutegames.com/templates/css/bootstrap/js/bootstrap.min.js"></script>
-		<script src="http://mycutegames.com/templates/js/ouibounce.min.js"></script>
-		<script src="http://mycutegames.com/templates/js/owl-carousel/owl.carousel.js"></script>
-        <script src="http://mycutegames.com/templates/js/scripts.js"></script>
-		<script src="http://mycutegames.com/templates/js/ufo.js"></script>
+		<link rel="stylesheet" href="https://mycutegames.com/templates/css/bootstrap/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="https://mycutegames.com/templates/css/jquery.mCustomScrollbar.css">
+		<link rel="stylesheet" href="https://mycutegames.com/templates/js/jquery-ui-1.11.2/jquery-ui.css">
+		<link href="https://mycutegames.com/templates/css/style_new.css?18" rel="stylesheet">
 
-		<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-				<!-- End Cookie Consent plugin -->
-        <!-- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-53195031-1', 'auto');
-  ga('send', 'pageview');
-
-</script> --><script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-53195031-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = false;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-3795986-14"></script>
+<script>
+  window.ga_id = 'UA-3795986-14';
 </script>
+		
+		<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script src="https://mycutegames.com/templates/js/jquery-1.11.2.min.js"></script>
+		<script src="https://mycutegames.com/templates/js/scripts.js?2"></script>
+
+		<!-- OneSignalSDK -->
+		<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+
+		<!-- //OneSignalSDK -->
+		<!-- Latest compiled and minified JavaScript -->
+		<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script-->
+		<script type="text/javascript" src="https://mycutegames.com/templates/js/jquery-ui-1.11.2/jquery-ui.min.js"></script>
+		<script src="https://mycutegames.com/templates/js/jquery.mCustomScrollbar.concat.min.js"></script>
+		<script src="https://mycutegames.com/templates/css/bootstrap/js/bootstrap.min.js"></script>
+		<script src="https://mycutegames.com/templates/js/ouibounce.min.js"></script>
+		<script src="https://mycutegames.com/templates/js/owl-carousel/owl-carousel2/owl.carousel.min.js"></script>
+		<script src="https://mycutegames.com/templates/js/ufo.js"></script>
+
 	<script integrity="sha256-xjwKUY/NgkPjZZBOtOxRYtK20GaqTwUCf7WYCJ1z69w=" crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/fuckadblock/3.2.1/fuckadblock.min.js"></script></head>
 	<body class="girls-page" alpha2="US">
 		<div class="mcg">
@@ -76,7 +58,7 @@
 		<div class="col-lg-12">
 			<div class="logo pull-left hidden-sm hidden-xs">
 				<a href="/">
-					<img alt="My Cute Games" src="http://mycutegames.com/templates/images/logo.png">
+					<img alt="My Cute Games" src="https://mycutegames.com/templates/images/logo.png">
 				</a>
 			</div>
 			<div class="menu_wrapper pull-right">
@@ -95,29 +77,29 @@
 				<div class="menu_content">
 					<ul class="list-inline fs0 mb0 ml0 mainmenu">
 																													<li class="menu_item">
-									<img alt="crown" class="menu_crown" src="http://mycutegames.com/templates/images/crown.png">
+									<img alt="crown" class="menu_crown" src="https://mycutegames.com/templates/images/crown.png">
 									<a class="cat" href="/Games/Princess">Princess</a>
 								</li>
 																																												<li class="menu_item">
-									<img alt="crown" class="menu_crown" src="http://mycutegames.com/templates/images/crown.png">
+									<img alt="crown" class="menu_crown" src="https://mycutegames.com/templates/images/crown.png">
 									<a class="cat" href="/Games/Dolls">Dolls</a>
 								</li>
 																																												<li class="menu_item">
-									<img alt="crown" class="menu_crown" src="http://mycutegames.com/templates/images/crown.png">
+									<img alt="crown" class="menu_crown" src="https://mycutegames.com/templates/images/crown.png">
 									<a class="cat" href="/Games/Frozen">Frozen</a>
 								</li>
 																																												<li class="menu_item exclusive">
 									<a href="/Games/Exclusive">
-										1<img class="normal" alt="crown" src="http://mycutegames.com/templates/images/button_exclusive_hover.png">
-										<img class="hover" alt="crown" src="http://mycutegames.com/templates/images/button_exclusive.png">
+										1<img class="normal" alt="crown" src="https://mycutegames.com/templates/images/button_exclusive_hover.png">
+										<img class="hover" alt="crown" src="https://mycutegames.com/templates/images/button_exclusive.png">
 									</a>
 								</li>
 																																												<li class="menu_item">
-									<img alt="crown" class="menu_crown" src="http://mycutegames.com/templates/images/crown.png">
+									<img alt="crown" class="menu_crown" src="https://mycutegames.com/templates/images/crown.png">
 									<a class="cat" href="/Games/Monsters">Monsters</a>
 								</li>
 																																												<li class="menu_item">
-									<img alt="crown" class="menu_crown" src="http://mycutegames.com/templates/images/crown.png">
+									<img alt="crown" class="menu_crown" src="https://mycutegames.com/templates/images/crown.png">
 									<a class="cat" href="/Games/MyLittlePony">My Little Pony</a>
 								</li>
 																																				<li class="menu_item">
@@ -230,8 +212,16 @@
 			</div>
 			<div class="footer_wrapper">
 				<footer class="footer">
-	<span><a href="/submit/">Submit game</a> | <a href="/freegames/">Free games</a> | <a href="/privacy.html">PrivacyPolicy</a> | <a href="/contacts/">Contacts</a> | <a href="/sitemap/">Sitemap</a></span>
-</footer>			</div>
+	<span><a href="/submit/">Submit game</a> | <a href="/freegames/">Free games</a> | <a href="/privacy.html">PrivacyPolicy</a> | <a href="/cookies">CookiePolicy</a> | <a href="/contacts/">Contacts</a> | <a href="/sitemap/">Sitemap</a></span>
+</footer>
+<div class="dialog-wrapper">
+	<div class="dialog">
+		<div>
+			mycutegames.com uses cookies to ensure you get the best experience on our website. <br> You consent to our cookies if you continue to use our website. <a href="/cookies">Learn more about how we use cookies</a>
+		</div>
+		<button type="button" class="cc-btn btn-white" onclick="gdpr.accepted();">OK</button>
+	</div>
+</div>			</div>
 		</div>
 		<div id="adblock_popup" class="adblock_popup__wrapper">
 	<div class="adblock_popup">
@@ -295,21 +285,21 @@
 		</div>
 		<div class="dont-leave-us__games">
 							<div class="game-item ">
-					<a href="http://mycutegames.com/Games/Princess/Princesses-Sweet-Quinceanera-Party.html" class="clickA">
-						<img class="br_all_10 game-item-img" alt="Princesses Sweet Quinceanera Party" src="/upload/thumbs/330/mcg_8737.gif">
-						<span class="game-item-title">Princesses Sweet Quinceanera Party</span>
+					<a href="https://mycutegames.com/Games/Princess/Princess-Coachella-Inspired-Wedding.html" class="clickA">
+						<img class="br_all_10 game-item-img" alt="Princess Coachella Inspired Wedding" src="/upload/thumbs/330/7451.gif">
+						<span class="game-item-title">Princess Coachella Inspired Wedding</span>
 					</a>
 				</div>
 							<div class="game-item ">
-					<a href="http://mycutegames.com/Games/Princess/Princesses-Skipping-School.html" class="clickA">
-						<img class="br_all_10 game-item-img" alt="Princesses Skipping School" src="/upload/thumbs/330/mcg_9034.gif">
-						<span class="game-item-title">Princesses Skipping School</span>
+					<a href="https://mycutegames.com/Games/Princess/Wedding-Dress-for-Ariana.html" class="clickA">
+						<img class="br_all_10 game-item-img" alt="Wedding Dress for Ariana" src="/upload/thumbs/330/mcg_8954.gif">
+						<span class="game-item-title">Wedding Dress for Ariana</span>
 					</a>
 				</div>
 							<div class="game-item ">
-					<a href="http://mycutegames.com/Games/Princess/Hollywood-Movie-Part-for-Princess.html" class="clickA">
-						<img class="br_all_10 game-item-img" alt="Hollywood Movie Part for Princess" src="/upload/thumbs/330/6981.gif">
-						<span class="game-item-title">Hollywood Movie Part for Princess</span>
+					<a href="https://mycutegames.com/Games/Princess/Princess-College-Campus-Wedding.html" class="clickA">
+						<img class="br_all_10 game-item-img" alt="Princess College Campus Wedding" src="/upload/thumbs/330/6843.gif">
+						<span class="game-item-title">Princess College Campus Wedding</span>
 					</a>
 				</div>
 					</div>
@@ -322,8 +312,10 @@
 
         ouibounce(document.getElementById('dont-leave-us'), {
             sensitivity: 50,
-            aggressive: true,
+            aggressive: false,
             delay: 150,
+            cookieExpire: 0.5,
+            cookieName: 'viewedDontLeaveUsModal',
             callback: function() {
                 setCookie('dont_live_us_counter', +(getCookie('dont_live_us_counter') || 0) + 1, {path:'/'});
             }
@@ -334,5 +326,21 @@
             $("#dont-leave-us").fadeOut();
         });
 	</script>
+
+		
+		<script>
+            if (!gdpr.getSettings().marketing) {
+                (function () {
+                    var OneSignal = window.OneSignal || [];
+                    OneSignal.push(function () {
+                        OneSignal.init({
+                            appId: "c9d92ef1-f885-4b70-97d3-ab0fa58bbc94",
+                        });
+                        OneSignal.showHttpPrompt();
+                    });
+                })();
+            }
+		</script>
+		
 	
 </body></html>
